--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ matrix:
   include:
     - os: linux
       sudo: false
-      env: CXX=g++-5
+      env: CXX=g++-5 CXXFLAGS="-fpermissive"
       addons:
         apt:
           sources: [ 'ubuntu-toolchain-r-test' ]
