integrate and run clang-format

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,15 @@ matrix:
           packages: [ 'libstdc++6', 'libstdc++-5-dev' ]
       script:
         - make tidy
+    # Clang format build
+    - os: linux
+      sudo: false
+      addons:
+        apt:
+          sources: [ 'ubuntu-toolchain-r-test' ]
+          packages: [ 'libstdc++6', 'libstdc++-5-dev' ]
+      script:
+        - make format
 
 env:
   global:
